fix bug with btn at dark mode

--- a/app/sass/all.scss
+++ b/app/sass/all.scss
@@ -176,4 +176,8 @@
 			}
 		}
 	}
+
+	.btn-outline-light {
+		@include button-variant(theme-color('dark'), theme-color('light'));
+	}
 }
